tests/codegen/fail/input-object/derive_incompatible_field_type.stderr
error[E0277]: the trait bound `ObjectA: IsInputType<__S>` is not satisfied
  --> fail/input-object/derive_incompatible_field_type.rs:10:12
   |
10 |     field: ObjectA,
   |            ^^^^^^^ the trait `IsInputType<__S>` is not implemented for `ObjectA`
   |
   = help: the following other types implement trait `IsInputType<S>`:
             <bool as IsInputType<__S>>
             <i32 as IsInputType<__S>>
             <f64 as IsInputType<__S>>
             <Object as IsInputType<__S>>
             <Box<T> as IsInputType<S>>
             <juniper::schema::model::DirectiveLocation as IsInputType<__S>>
             <Arc<T> as IsInputType<S>>
             <Vec<T> as IsInputType<S>>
           and $N others

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
  --> fail/input-object/derive_incompatible_field_type.rs:10:12
   |
8  | #[derive(GraphQLInputObject)]
   |          ------------------ required by a bound introduced by this call
9  | struct Object {
10 |     field: ObjectA,
   |            ^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjectA`
   |
   = help: the following other types implement trait `FromInputValue<S>`:
             <bool as FromInputValue<__S>>
             <i32 as FromInputValue<__S>>
             <f64 as FromInputValue<__S>>
             <Object as FromInputValue<__S>>
             <Box<T> as FromInputValue<S>>
             <juniper::schema::model::DirectiveLocation as FromInputValue<__S>>
             <Arc<T> as FromInputValue<S>>
             <Vec<T> as FromInputValue<S>>
           and $N others
note: required by a bound in `Registry::<S>::arg`
  --> $WORKSPACE/juniper/src/executor/mod.rs
   |
   |     pub fn arg<T>(&mut self, name: ArcStr, info: &T::TypeInfo) -> Argument<S>
   |            --- required by a bound in this associated function
   |     where
   |         T: GraphQLType<S> + FromInputValue<S>,
   |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<S>::arg`

error[E0277]: the trait bound `ObjectA: FromInputValue<__S>` is not satisfied
 --> fail/input-object/derive_incompatible_field_type.rs:8:10
  |
8 | #[derive(GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjectA`
  |
  = help: the following other types implement trait `FromInputValue<S>`:
            <bool as FromInputValue<__S>>
            <i32 as FromInputValue<__S>>
            <f64 as FromInputValue<__S>>
            <Object as FromInputValue<__S>>
            <Box<T> as FromInputValue<S>>
            <juniper::schema::model::DirectiveLocation as FromInputValue<__S>>
            <Arc<T> as FromInputValue<S>>
            <Vec<T> as FromInputValue<S>>
          and $N others
  = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjectA: ToInputValue<_>` is not satisfied
 --> fail/input-object/derive_incompatible_field_type.rs:8:10
  |
8 | #[derive(GraphQLInputObject)]
  |          ^^^^^^^^^^^^^^^^^^ the trait `ToInputValue<_>` is not implemented for `ObjectA`
  |
  = help: the following other types implement trait `ToInputValue<S>`:
            <bool as ToInputValue<__S>>
            <i32 as ToInputValue<__S>>
            <f64 as ToInputValue<__S>>
            <Object as ToInputValue<__S>>
            <Box<T> as ToInputValue<S>>
            <juniper::schema::model::DirectiveLocation as ToInputValue<__S>>
            <Arc<T> as ToInputValue<S>>
            <Vec<T> as ToInputValue<S>>
          and $N others
  = note: this error originates in the derive macro `GraphQLInputObject` (in Nightly builds, run with -Z macro-backtrace for more info)
